[package]
name = "ender-eye"
version = "1.0.0"
edition = "2026"
description = "Encrypt and decrypt messages using SGA encoding + AES-256-GCM, inspired by the Standard Galactic Alphabet from Minecraft."
license = "MIT"
repository = "https://github.com/shrpp/ender-eye"
keywords = ["encryption", "aes-gcm", "argon2", "sga", "minecraft"]
categories = ["cryptography"]
readme = "README.md"

[dependencies]
thiserror = "1"
argon2 = "0.5"
rand = { version = "0.8", features = ["getrandom"] }
zeroize = { version = "1.7", features = ["derive"] }
aes-gcm = { version = "0.10", features = ["aes", "std"] }
base64 = "0.22"
